manifests/kube-prom-stack-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: meitaltal
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: meital-kube-prom-stack
    app.kubernetes.io/name: grafana
  ports:
  - name: grafana-port
    port: 3000
    targetPort: 3000
    protocol: TCP
