manifests/mysql-service.yaml
---
apiVersion: v1  
kind: Service  
metadata:  
  name: mysql-service  
  namespace: meitaltal
spec:  
  ports:  
  - port: 3306  
    protocol: TCP  
  selector:  
    app: mysql
