manifests/wordpress-service.yaml
---
apiVersion: v1  
kind: Service  
metadata:  
  name: wordpress-service  
  namespace: meitaltal
spec:  
  type: LoadBalancer 
  ports:  
  - name: http
    port: 80
    targetPort: 80
  - name: htpps
    port: 443
    targetPort: 443
  selector:
    app: wordpress
