manifests/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: meitaltal
spec:
  ingressClassName: meitaltal
  rules:
  - host: acf3314c8225e48fdbc4f011f68a257b-1202305726.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /(grafana|login)(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: meitaltal-kube-prom-stack-grafana
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
